# snowflake-cortex-agent-evaluations-sample

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  agent_client.py  evaluate.py  pyproject.toml  test_cases.py
config/: feedback.yaml  test_cases.yaml
docs/: architecture.md  concepts.md  evaluation.md  setup.md
src/: agent_client.py  evaluate.py  feedback.py  test_cases.py
